data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2179.wast
;; 9. **Test 9**: Create a loop that utilizes `br_table` alongside `br_if` and basic arithmetic to adjust the operand dynamically. Test for correct flow control by adjusting the operand to switch labels.    - **Constraint**: Validates combination of `br_table` with other control instructions.    - **Relation to Infinite Loops**: Incorrect operand adjustments can trap the loop.

(assert_invalid
  (module (func
    (loop (result i32)
      (block (block (br_table 0 1 (i32.add (i32.const 1) (i32.const 1)))))
    )
  ))
  "unreachable"
)